user pages + use typescript
Partially fixes #99 (needs CI).
Partially implements #105 (still needs scratch list).

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Decompilation scratchpad" />
+        <meta name="description" content="Crowdsourced decompilation website" />
 
         <link rel="stylesheet" type="text/css" href="/dist/global.css" />
 
-        <title>decomp.me scratchpad</title>
+        <title>decomp.me</title>
     </head>
     <body>
         <div id="root"></div>
