--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,10 @@
 
         <link rel="stylesheet" type="text/css" href="/dist/global.css" />
 
-        <title>decomp.me scratchpad</title>
+        <link rel="shortcut icon" type="image/png" href="/frog.png" />
+        <link rel="apple-touch-icon" type="image/png" href="/frog.png" />
+
+        <title>decomp.me</title>
     </head>
     <body>
         <div id="root"></div>
