many fixes and stuff

--- a/frontend/down.html
+++ b/frontend/down.html
@@ -7,6 +7,9 @@
         <meta name="theme-color" content="#282e31" />
         <meta name="viewport" content="width=device-width">
 
+        <!-- auto-reload page every 5s -->
+        <meta http-equiv="refresh" content="5" />
+
         <style>
             :root {
                 --frog-pupil: #292f33;
