--- a/frontend/down.html
+++ b/frontend/down.html
@@ -119,7 +119,7 @@
         </svg>
 
         <div>
-            <h1>decomp.me is down for maintainance</h1>
+            <h1>decomp.me is down for maintenance</h1>
             <p>We're sorry for the inconvenience. We'll be back up shortly!</p>
             <p class="mute">If maintenance is taking longer than you'd expect, please <a href="https://discord.gg/sutqNShRRs">let us know</a>.</p>
         </div>
