--- a/frontend/down.html
+++ b/frontend/down.html
@@ -5,7 +5,8 @@
 
         <meta charset="utf-8" />
         <meta name="theme-color" content="#282e31" />
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width" />
+        <meta name="darkreader-lock" />
 
         <style>
             :root {
