add tailwindcss and scss

--- a/packages/app/src/app.html
+++ b/packages/app/src/app.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+
+        <meta name="theme-color" content="#282e31" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="darkreader-lock" />
+
+        <!-- TODO: PWA -->
+
+        <link rel="shortcut icon" href="%sveltekit.assets%/purplefrog.svg" />
+        <link rel="apple-touch-icon" href="%sveltekit.assets%/purplefrog-bg-180.png" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
