--- a/packages/app/src/app.html
+++ b/packages/app/src/app.html
@@ -15,6 +15,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		%sveltekit.body%
 	</body>
 </html>
