add display:contents app wrapper back

--- a/packages/app/src/app.html
+++ b/packages/app/src/app.html
@@ -15,6 +15,8 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		%sveltekit.body%
+        <div class="contents">
+		    %sveltekit.body%
+        </div>
 	</body>
 </html>
